--- a/src/main/java/com/criollo/machmillenium/vistas/Inicio.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/Inicio.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="9e080" binding="panel" layout-manager="FormLayout">
+      <grid id="9e080" layout-manager="FormLayout">
         <rowspec value="center:53px:noGrow"/>
         <rowspec value="center:max(d;4px):noGrow"/>
         <rowspec value="center:d:grow"/>
@@ -133,7 +133,7 @@
               </component>
             </children>
           </grid>
-          <component id="c07c7" class="javax.swing.JLabel" binding="fondo">
+          <component id="c07c7" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="1" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
               <forms/>
