--- a/src/main/java/com/criollo/machmillenium/vistas/emergentes/RecuperarClave.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/emergentes/RecuperarClave.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/"  version="1" max-version="1.9" bind-to-class="com.criollo.machmillenium.vistas.emergentes.RecuperarClave">
-  <grid id="27dc6" layout-manager="GridBagLayout" row-count="4" column-count="3">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.emergentes.RecuperarClave">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="500" height="500"/>
     </constraints>
@@ -10,69 +10,57 @@
       <component id="f1cd4" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag top="4" left="15" bottom="20" right="15" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="FORGOT PASSWORD"/>
+          <font size="26"/>
+          <text value="Recuperación de clave"/>
         </properties>
       </component>
       <component id="6fe34" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag top="4" left="15" bottom="4" right="15" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="Secret Code"/>
+          <text value="Clave actual"/>
         </properties>
       </component>
-      <component id="1f3d5" class="javax.swing.JPasswordField">
+      <component id="1f3d5" class="javax.swing.JPasswordField" binding="campoClave">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag top="4" left="15" bottom="4" right="15" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
-      <component id="25e92" class="javax.swing.JLabel">
+      <grid id="c9679" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="UserName"/>
-        </properties>
-      </component>
-      <component id="1ef52" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag top="50" left="15" bottom="15" right="15" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
-      </component>
-      <component id="12ef2" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Password"/>
-        </properties>
-      </component>
-      <component id="25b23" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="2b0d9" class="javax.swing.JButton">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Submit"/>
-        </properties>
-      </component>
-      <component id="5b7f4" class="javax.swing.JButton">
-        <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Back"/>
-        </properties>
-      </component>
+        <border type="none"/>
+        <children>
+          <component id="5b7f4" class="javax.swing.JButton" binding="cerrarButton">
+            <constraints/>
+            <properties>
+              <maximumSize width="120" height="30"/>
+              <minimumSize width="120" height="30"/>
+              <preferredSize width="120" height="30"/>
+              <text value="Cerrar"/>
+            </properties>
+          </component>
+          <component id="2b0d9" class="javax.swing.JButton" binding="enviarButton">
+            <constraints/>
+            <properties>
+              <maximumSize width="120" height="30"/>
+              <minimumSize width="120" height="30"/>
+              <preferredSize width="120" height="30"/>
+              <text value="Enviar"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
