--- a/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
@@ -37,9 +37,12 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <grid id="f37bc" binding="inicio" layout-manager="FlowLayout" hgap="15" vgap="5" flow-align="1">
+                  <grid id="f37bc" binding="inicio" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <maximumSize width="810" height="32767"/>
+                      <preferredSize width="790" height="620"/>
+                    </properties>
                     <border type="none"/>
                     <children/>
                   </grid>
