--- a/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
@@ -23,7 +23,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="98508" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+          <grid id="98508" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <tabbedpane title="Inicio"/>
             </constraints>
@@ -31,9 +31,9 @@
             <border type="none"/>
             <children>
               <scrollpane id="3d1b">
-                <constraints/>
+                <constraints border-constraint="North"/>
                 <properties>
-                  <preferredSize width="810" height="460"/>
+                  <preferredSize width="810" height="420"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -48,6 +48,33 @@
                   </grid>
                 </children>
               </scrollpane>
+              <grid id="daef7" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
+                <properties>
+                  <preferredSize width="10" height="40"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="837f6" class="javax.swing.JButton" binding="imprimirReporteGeneralButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir reporte general"/>
+                    </properties>
+                  </component>
+                  <component id="54187" class="javax.swing.JButton" binding="imprimirGráficosButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir gráficos"/>
+                    </properties>
+                  </component>
+                  <component id="9cde5" class="javax.swing.JButton" binding="recuperarClaveButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Recuperar clave"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
           <grid id="b9a5d" layout-manager="BorderLayout" hgap="0" vgap="0">
@@ -60,18 +87,27 @@
             </properties>
             <border type="none"/>
             <children>
-              <grid id="2dab5" layout-manager="GridBagLayout">
-                <constraints border-constraint="Center"/>
+              <grid id="2dab5" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
                 <properties>
-                  <preferredSize width="125" height="128"/>
+                  <preferredSize width="125" height="40"/>
                 </properties>
                 <border type="none"/>
                 <children>
+                  <component id="ba213" class="javax.swing.JButton" binding="imprimirConGráficosButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir con gráficos"/>
+                    </properties>
+                  </component>
+                  <component id="f5010" class="javax.swing.JButton" binding="imprimirButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir"/>
+                    </properties>
+                  </component>
                   <component id="654dd" class="javax.swing.JButton" binding="btnAgregarCliente">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
+                    <constraints/>
                     <properties>
                       <label value="Agregar"/>
                       <maximumSize width="84" height="30"/>
@@ -83,9 +119,9 @@
                 </children>
               </grid>
               <scrollpane id="612f1">
-                <constraints border-constraint="West"/>
+                <constraints border-constraint="North"/>
                 <properties>
-                  <preferredSize width="685" height="450"/>
+                  <preferredSize width="685" height="420"/>
                   <visible value="true"/>
                 </properties>
                 <border type="none"/>
