--- a/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
@@ -121,7 +121,7 @@
               <scrollpane id="612f1">
                 <constraints border-constraint="North"/>
                 <properties>
-                  <preferredSize width="685" height="420"/>
+                  <preferredSize width="685" height="620"/>
                   <visible value="true"/>
                 </properties>
                 <border type="none"/>
@@ -148,18 +148,27 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="be1e4" binding="botonesPanelPersonal" layout-manager="GridBagLayout">
-                <constraints border-constraint="Center"/>
+              <grid id="be1e4" binding="botonesPanelPersonal" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
                 <properties>
-                  <preferredSize width="125" height="128"/>
+                  <preferredSize width="125" height="40"/>
                 </properties>
                 <border type="none"/>
                 <children>
+                  <component id="843ea" class="javax.swing.JButton" binding="imprimirButton1" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir"/>
+                    </properties>
+                  </component>
+                  <component id="b6dcd" class="javax.swing.JButton" binding="verGraficoButton">
+                    <constraints/>
+                    <properties>
+                      <text value="Ver Gráfico"/>
+                    </properties>
+                  </component>
                   <component id="4738d" class="javax.swing.JButton" binding="agregarButton" default-binding="true">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
+                    <constraints/>
                     <properties>
                       <text value="Agregar"/>
                     </properties>
@@ -167,9 +176,9 @@
                 </children>
               </grid>
               <scrollpane id="bc725">
-                <constraints border-constraint="West"/>
+                <constraints border-constraint="North"/>
                 <properties>
-                  <preferredSize width="685" height="450"/>
+                  <preferredSize width="685" height="420"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -197,20 +206,29 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="efcc6" layout-manager="GridBagLayout">
-                <constraints border-constraint="Center"/>
+              <grid id="efcc6" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
                 <properties>
                   <minimumSize width="150" height="135"/>
-                  <preferredSize width="145" height="158"/>
+                  <preferredSize width="145" height="40"/>
                   <requestFocusEnabled value="true"/>
                 </properties>
                 <border type="none"/>
                 <children>
+                  <component id="e53c3" class="javax.swing.JButton" binding="imprimirTablaButton3" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir tabla"/>
+                    </properties>
+                  </component>
+                  <component id="e4b2b" class="javax.swing.JButton" binding="verGráficasButton1" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Ver gráficas"/>
+                    </properties>
+                  </component>
                   <component id="d7c03" class="javax.swing.JButton" binding="botonAgregar">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
+                    <constraints/>
                     <properties>
                       <text value="Agregar"/>
                     </properties>
@@ -218,9 +236,9 @@
                 </children>
               </grid>
               <scrollpane id="17ee6">
-                <constraints border-constraint="West"/>
+                <constraints border-constraint="North"/>
                 <properties>
-                  <preferredSize width="685" height="450"/>
+                  <preferredSize width="685" height="420"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -244,20 +262,29 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="543b0" layout-manager="GridBagLayout">
-                <constraints border-constraint="Center"/>
+              <grid id="543b0" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
                 <properties>
                   <minimumSize width="150" height="135"/>
-                  <preferredSize width="145" height="158"/>
+                  <preferredSize width="145" height="40"/>
                   <requestFocusEnabled value="true"/>
                 </properties>
                 <border type="none"/>
                 <children>
+                  <component id="9a0f9" class="javax.swing.JButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir tabla"/>
+                    </properties>
+                  </component>
+                  <component id="fade2" class="javax.swing.JButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Ver gráficas"/>
+                    </properties>
+                  </component>
                   <component id="99a1b" class="javax.swing.JButton" binding="botonAgregarMaquinaria">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
+                    <constraints/>
                     <properties>
                       <text value="Agregar"/>
                     </properties>
@@ -265,9 +292,9 @@
                 </children>
               </grid>
               <scrollpane id="6d52b">
-                <constraints border-constraint="West"/>
+                <constraints border-constraint="North"/>
                 <properties>
-                  <preferredSize width="685" height="450"/>
+                  <preferredSize width="685" height="420"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -290,9 +317,9 @@
             <border type="none"/>
             <children>
               <scrollpane id="106e4">
-                <constraints border-constraint="West"/>
+                <constraints border-constraint="North"/>
                 <properties>
-                  <preferredSize width="685" height="450"/>
+                  <preferredSize width="685" height="420"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -307,18 +334,27 @@
                   </component>
                 </children>
               </scrollpane>
-              <grid id="fc661" layout-manager="GridBagLayout">
-                <constraints border-constraint="East"/>
+              <grid id="fc661" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
                 <properties>
-                  <preferredSize width="125" height="128"/>
+                  <preferredSize width="125" height="40"/>
                 </properties>
                 <border type="none"/>
                 <children>
+                  <component id="4baaa" class="javax.swing.JButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir tabla"/>
+                    </properties>
+                  </component>
+                  <component id="fd1c" class="javax.swing.JButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Ver gráficas"/>
+                    </properties>
+                  </component>
                   <component id="8ab3a" class="javax.swing.JButton" binding="botonAgregarTipoInsumo">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
+                    <constraints/>
                     <properties>
                       <label value="Agregar"/>
                       <maximumSize width="84" height="30"/>
@@ -339,9 +375,9 @@
             <border type="none"/>
             <children>
               <scrollpane id="2a247">
-                <constraints border-constraint="West"/>
+                <constraints border-constraint="North"/>
                 <properties>
-                  <preferredSize width="685" height="450"/>
+                  <preferredSize width="685" height="420"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -356,18 +392,27 @@
                   </component>
                 </children>
               </scrollpane>
-              <grid id="b10d7" layout-manager="GridBagLayout">
-                <constraints border-constraint="East"/>
+              <grid id="b10d7" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
                 <properties>
-                  <preferredSize width="125" height="128"/>
+                  <preferredSize width="125" height="40"/>
                 </properties>
                 <border type="none"/>
                 <children>
+                  <component id="50dd1" class="javax.swing.JButton" binding="imprimirTablaButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir tabla"/>
+                    </properties>
+                  </component>
+                  <component id="ff717" class="javax.swing.JButton" binding="imprimirConGraficosButton1">
+                    <constraints/>
+                    <properties>
+                      <text value="Ver gráficas"/>
+                    </properties>
+                  </component>
                   <component id="3094" class="javax.swing.JButton" binding="botonAgregarMaterial">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
+                    <constraints/>
                     <properties>
                       <label value="Agregar"/>
                       <maximumSize width="84" height="30"/>
@@ -387,18 +432,27 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="610be" layout-manager="GridBagLayout">
-                <constraints border-constraint="Center"/>
+              <grid id="610be" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
                 <properties>
-                  <preferredSize width="125" height="128"/>
+                  <preferredSize width="125" height="40"/>
                 </properties>
                 <border type="none"/>
                 <children>
+                  <component id="dd546" class="javax.swing.JButton" binding="imprimirTablaButton1" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir tabla"/>
+                    </properties>
+                  </component>
+                  <component id="d89ca" class="javax.swing.JButton" binding="verGraficoPresupuestoButton">
+                    <constraints/>
+                    <properties>
+                      <text value="Ver gráficas"/>
+                    </properties>
+                  </component>
                   <component id="a2e05" class="javax.swing.JButton" binding="botonAgregarPresupuesto">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
+                    <constraints/>
                     <properties>
                       <text value="Agregar"/>
                     </properties>
@@ -406,9 +460,9 @@
                 </children>
               </grid>
               <scrollpane id="db37c">
-                <constraints border-constraint="West"/>
+                <constraints border-constraint="North"/>
                 <properties>
-                  <preferredSize width="685" height="450"/>
+                  <preferredSize width="685" height="420"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -432,18 +486,27 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="d6bb7" layout-manager="GridBagLayout">
-                <constraints border-constraint="Center"/>
+              <grid id="d6bb7" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
                 <properties>
-                  <preferredSize width="125" height="128"/>
+                  <preferredSize width="125" height="40"/>
                 </properties>
                 <border type="none"/>
                 <children>
+                  <component id="ada1d" class="javax.swing.JButton" binding="imprimirTablaButton2" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Imprimir tabla"/>
+                    </properties>
+                  </component>
+                  <component id="b0e6b" class="javax.swing.JButton" binding="verGráficasButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Ver gráficas"/>
+                    </properties>
+                  </component>
                   <component id="7b670" class="javax.swing.JButton" binding="botonAgregarObra">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
+                    <constraints/>
                     <properties>
                       <text value="Agregar"/>
                     </properties>
@@ -451,9 +514,9 @@
                 </children>
               </grid>
               <scrollpane id="97629">
-                <constraints border-constraint="West"/>
+                <constraints border-constraint="North"/>
                 <properties>
-                  <preferredSize width="685" height="450"/>
+                  <preferredSize width="685" height="420"/>
                 </properties>
                 <border type="none"/>
                 <children>
